--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,6 +11,10 @@ on:
         type: string
         required: false
         default: test
+      publish:
+        type: boolean
+        required: false
+        default: true
 
 jobs:
   build:
@@ -33,7 +37,7 @@ jobs:
       - name: Build image
         uses: docker/build-push-action@v5
         with:
-          push: true
+          push: ${{ inputs.publish }}
           context: .
           target: ${{ inputs.target }}
           tags: ${{ inputs.tag-name }}:${{ inputs.target }}
