Move from wicked_pdf to prawn

--- a/.reek.yml
+++ b/.reek.yml
@@ -10,6 +10,14 @@ detectors:
   InstanceVariableAssumption:
     exclude:
       - "/Controller$/"
+  UncommunicativeMethodName:
+    exclude:
+      - "Pdf::Format#h1"
+      - "Pdf::Format#h2"
+      - "Pdf::Format#h3"
+      - "Pdf::Format#h5"
+  TooManyStatements:
+    max_statements: 7
 
 directories:
   "db/migrate":
