Rename all reusable workflows to have prepended underscore and fix date on cypress tests
By renaming files, I will make it easier to see what are reusable workflows and what are really workflows and cleanup actions view to remove jobs that are not executed anymore.

Also fixes a bug on cypress tests that caused builds to fail starting 1/1/2024

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,14 +11,14 @@ on:
 jobs:
   build_production:
     name: 'Build: Production'
-    uses: ./.github/workflows/docker.yml
+    uses: ./.github/workflows/_docker.yml
     secrets: inherit
     with:
       target: production
 
   build_development:
     name: 'Build: Development'
-    uses: ./.github/workflows/docker.yml
+    uses: ./.github/workflows/_docker.yml
     secrets: inherit
     with:
       target: development
