--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "ci-cd"
   ],
   "engines": {
-    "node": "^18.12.1",
-    "npm": "^7.5.4",
-    "yarn": "^1.22.0"
+    "node": "^20.11.1",
+    "npm": "^10.2.4",
+    "yarn": "^4.1.0"
   },
   "devDependencies": {
     "cypress": "*",
@@ -59,5 +59,6 @@
     "cypress:ci": "start-test server:start 3000 cypress:run",
     "eslint": "eslint --config=.eslintrc.js app/javascript/**/**.js",
     "eslint:tests": "eslint --config=.eslintrc.js spec/**/**.js"
-  }
+  },
+  "packageManager": "yarn@4.1.0"
 }
