--- a/.github/workflows/_docker.yml
+++ b/.github/workflows/_docker.yml
@@ -3,6 +3,9 @@ name: Build
 on:
   workflow_call:
     inputs:
+      name:
+        type: string
+        required: true
       tag-name:
         type: string
         required: false
@@ -11,6 +14,9 @@ on:
         type: string
         required: false
         default: test
+      reference:
+        type: string
+        required: false
       publish:
         type: boolean
         required: false
@@ -18,12 +24,14 @@ on:
 
 jobs:
   build:
-    name: "Build Image"
+    name: ${{ inputs.name }}
     runs-on: ubuntu-20.04
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.reference }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
