OPT: Add prefix to dependabot PRs to follow commit convention

--- a/.github/workflows/_tag.yml
+++ b/.github/workflows/_tag.yml
@@ -24,7 +24,7 @@ jobs:
           branch: main
           majorList: "BREAK"
           minorList: "NEW"
-          patchList: "FIX"
+          patchList: "FIX,OPT"
 
   create-release:
     name: Release
