--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,8 @@ updates:
   - package-ecosystem: "bundler"
     directory: "/"
     open-pull-requests-limit: 50
+    commit-message:
+      prefix: "OPT"
     schedule:
       interval: "daily"
       time: "08:00"
@@ -19,6 +21,8 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     open-pull-requests-limit: 50
+    commit-message:
+      prefix: "OPT"
     schedule:
       interval: "daily"
       time: "08:00"
