--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
     needs: tag
     with:
       tag: ${{needs.tag.outputs.version}}
+      reference: ${{ github.sha }}
 
   build_production:
     name: Build
